--- a/repository.yml
+++ b/repository.yml
@@ -126,7 +126,7 @@ repo.deps:
         repo: mcuboot
         branch: main
         vers:
-            master: 0-dev
+            master: 0-latest
             mynewt_1_7_0_tag: 1.3.1
             mynewt_1_8_0_tag: 1.5.0
             mynewt_1_9_0_tag: 1.7.2
