mcu/pic32: Add image_header region
This add dependency to mgmt/image_header package
that provides dummy image header so elf file can
be loaded to device without creating the image with newt tool.
This image header is then replaced by newt tool.

--- a/hw/mcu/microchip/pic32mz/pkg.yml
+++ b/hw/mcu/microchip/pic32mz/pkg.yml
@@ -28,6 +28,7 @@ pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
+    - "@apache-mynewt-core/mgmt/image_header"
 
 pkg.deps.ETH_0:
     - "@apache-mynewt-core/hw/drivers/lwip/pic32_eth"
