--- a/repository.yml
+++ b/repository.yml
@@ -40,6 +40,7 @@ repo.versions:
     "1.9.0": "mynewt_1_9_0_tag"
     "1.10.0": "mynewt_1_10_0_tag"
     "1.11.0": "mynewt_1_11_0_tag"
+    "1.12.0": "mynewt_1_12_0_tag"
 
     "0-latest": "1.11.0"
     "1-latest": "1.11.0"
@@ -59,6 +60,7 @@ repo.versions:
     "1.9-latest": "1.9.0"
     "1.10-latest": "1.10.0"
     "1.11-latest": "1.11.0"
+    "1.12-latest": "1.12.0"
 
 repo.newt_compatibility:
     # Allow all versions for 0.0.0.  This is a workaround to prevent a warning
@@ -78,6 +80,9 @@ repo.newt_compatibility:
     # Core 1.9.0+ requires newt 1.9.0+ (feature: sysval restrictions relaxed)
     # Core 1.10.0+ requires newt 1.10.0+ (feature: const sysval)
     # Core 1.11.0+ requires newt 1.11.0+ (feature: external modules)
+    # Core 1.12.0+ requires newt 1.12.0+ (feature: generated linked scripts)
+    1.12.0:
+        1.12.0: good
     1.11.0:
         1.11.0: good
     1.10.0:
@@ -119,6 +124,7 @@ repo.deps:
             mynewt_1_9_0_tag: 1.4.0
             mynewt_1_10_0_tag: 1.5.0
             mynewt_1_11_0_tag: 1.6.0
+            mynewt_1_12_0_tag: 1.7.0
 
     mcuboot:
         type: github
@@ -132,6 +138,7 @@ repo.deps:
             mynewt_1_9_0_tag: 1.7.2
             mynewt_1_10_0_tag: 1.7.2
             mynewt_1_11_0_tag: 1.10.0
+            mynewt_1_12_0_tag: 2.0.0
 
     apache-mynewt-mcumgr:
         type: github
@@ -143,3 +150,4 @@ repo.deps:
             mynewt_1_9_0_tag: 0.2.0
             mynewt_1_10_0_tag: 0.3.0
             mynewt_1_11_0_tag: 0.4.0
+            mynewt_1_12_0_tag: 0.4.0
