--- a/hw/bsp/nordic_pca10095_net/bsp.yml
+++ b/hw/bsp/nordic_pca10095_net/bsp.yml
@@ -17,10 +17,11 @@
 # under the License.
 #
 
-bsp.name: "nRF5340 PDK (Net Core)"
-bsp.url: https://www.nordicsemi.com/Software-and-tools/Development-Kits/nRF5340-PDK
+bsp.name: "nRF5340 DK (Net Core)"
+bsp.url: https://www.nordicsemi.com/Software-and-tools/Development-Kits/nRF5340-DK
 bsp.maker: "Nordic Semiconductor"
 bsp.arch: cortex_m33
+bsp.exclude_site: 1
 bsp.compiler: "@apache-mynewt-core/compiler/arm-none-eabi-m33"
 bsp.linkerscript:
     - "hw/bsp/nordic_pca10095_net/nrf5340_net.ld"
