--- a/hw/bsp/nucleo-f767zi/pkg.yml
+++ b/hw/bsp/nucleo-f767zi/pkg.yml
@@ -30,7 +30,7 @@ pkg.keywords:
 pkg.cflags: -DSTM32F767xx
 
 pkg.cflags.HARDFLOAT:
-    - -mfloat-abi=hard -mfpu=fpv4-sp-d16
+    - -mfloat-abi=hard -mfpu=fpv5-d16
 
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/stm/stm32f7xx"
