--- a/hw/bsp/nucleo-h723zg/pkg.yml
+++ b/hw/bsp/nucleo-h723zg/pkg.yml
@@ -30,7 +30,7 @@ pkg.keywords:
 pkg.cflags: -DSTM32H723xx -DUSE_FULL_LL_DRIVER
 
 pkg.cflags.HARDFLOAT:
-    - -mfloat-abi=hard -mfpu=fpv4-sp-d16
+    - -mfloat-abi=hard -mfpu=fpv5-d16
 
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/stm/stm32h7xx"
