sys/log: Update modlog name for msc_fat_view and dfu
This sets module name for logging to nicer values

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/usb/tinyusb/dfu/syscfg.yml
+++ b/hw/usb/tinyusb/dfu/syscfg.yml
@@ -111,6 +111,7 @@ syscfg.logs:
     USBD_DFU_LOG:
         module: MYNEWT_VAL(USBD_DFU_LOG_MODULE)
         level: MYNEWT_VAL(USBD_DFU_LOG_LVL)
+        name: '"DFU"'
 
 
 syscfg.vals.BOOT_LOADER:
