tinyusb/msc_fat_view: Make application version optional in readme
Generated README.TXT file contains line

App version: 1.2.1.2

This line is generated from image version from SLOT0.
This line uses fprintf and can increase code size if
printf-like functions were not otherwise used.
Now syscfg value MSC_FAT_VIEW_DEFAULT_README_VERSION can
disable line with version possibly reducing code size.

Additionally default application name used in README.TXT
is taken from APP_NAME syscfg value generated by newt tool.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/usb/tinyusb/msc_fat_view/syscfg.yml
+++ b/hw/usb/tinyusb/msc_fat_view/syscfg.yml
@@ -81,10 +81,14 @@ syscfg.defs:
         description: >
             If set to 1, adds default 'README.TXT' file with some basic information about firmware.
         value: 1
+    MSC_FAT_VIEW_DEFAULT_README_VERSION:
+        description: >
+            If set to 1, README.TXT will have application version number.
+        value: 1
     MSC_FAT_VIEW_DEFAULT_README_APP_NAME:
         description: >
             Application name that will be put in default README.TXT.
-        value: '"Mynewt+TinyUSB"'
+        value: MYNEWT_VAL(APP_NAME)
     MSC_FAT_VIEW_DEFAULT_README_INCLUDE_HASHES:
         description: >
             Add git hashes into README.TXT.
