--- a/hw/bsp/nucleo-u575zi-q/syscfg.yml
+++ b/hw/bsp/nucleo-u575zi-q/syscfg.yml
@@ -73,6 +73,8 @@ syscfg.vals:
     TIMER_0_TIM: 'TIM15'
     TIMER_1_TIM: 'TIM16'
     TIMER_2_TIM: 'TIM17'
+    MCU_RAM_START: 0x20000000
+    MCU_RAM_SIZE: 0xB0000
     MYNEWT_DOWNLOADER: stm32_programmer_cli
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x0C000000
     JLINK_TARGET: STM32U575ZI
