sys/config: Make floating point support optional
Adding CONF_FLOAT support could increase code size significantly
if floating point are not used otherwise.

This makes float support optional (enabled by default when HARDFLOAT is present).

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/sys/config/syscfg.yml
+++ b/sys/config/syscfg.yml
@@ -93,6 +93,15 @@ syscfg.defs:
         description: >
             Max length of a value stored in the config FCB.
         value: 256
+    CONFIG_FLOAT_SUPPORT:
+        description: >
+            Enable float support in config.
+            For MCU without hardware support for enabling this if no other
+            function use floating point may increase image size 20kB or more.
+        value: 0
+
+syscfg.vals.HARDFLOAT:
+    value: 1
 
 syscfg.defs.(CONFIG_FCB || CONFIG_FCB2):
     CONFIG_FCB_FLASH_AREA:
