hw/bsp/arduino-zero: route default UART to debugger, add UART1
The default UART used for logging (console_printf) is now routed
through the debugger interface instead of external TX/RX pins, making
serial output easier to access via USB cable.
Additionally, UART1 has been configured and exposed on external
pins for user applications.

--- a/hw/bsp/arduino_zero/pkg.yml
+++ b/hw/bsp/arduino_zero/pkg.yml
@@ -29,5 +29,9 @@ pkg.deps.UART_0:
     - "@apache-mynewt-core/hw/drivers/uart"
     - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
 
+pkg.deps.UART_1:
+    - "@apache-mynewt-core/hw/drivers/uart"
+    - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
+
 pkg.cflags:
     - -D__SAMD21G18A__
