lvgl/st7789: Screen resolution update
ST7789 had hardcoded configurations for few
resolutions (240x320, 240x240, 240x135)

There are other configurations available.

Now offsets are computed in runtime.
This also fixes rotation to be aligned
with other drivers.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/drivers/display/lvgl/tft/st7789/syscfg.yml
+++ b/hw/drivers/display/lvgl/tft/st7789/syscfg.yml
@@ -20,7 +20,16 @@ syscfg.defs:
     ST7789_INVERSION_ON:
         description: ST7789 enable display inversion.
         value: 1
-
+    ST7789_HORIZONTAL_OFFSET:
+        description: >
+            Value added to x coordinates.
+            This can be set if display is not aligned correctly.
+        value:
+    ST7789_VERTICAL_OFFSET:
+        description: >
+            Value added to y coordinates.
+            This can be set if display is not aligned correctly.
+        value:
 syscfg.vals:
     LVGL_DISPLAY_HORIZONTAL_RESOLUTION: 240
     LVGL_DISPLAY_VERTICAL_RESOLUTION: 320
