hw/bsp: Add downloader selection for dialog boards
This adds option to select mynewt downloader script
for dialog_da1469x-dk boards.

--- a/hw/bsp/dialog_da1469x-dk-pro/pkg.yml
+++ b/hw/bsp/dialog_da1469x-dk-pro/pkg.yml
@@ -33,3 +33,4 @@ pkg.cflags.HARDFLOAT:
 pkg.deps:
     - "@apache-mynewt-core/libc"
     - "@apache-mynewt-core/hw/mcu/dialog/da14699"
+    - "@apache-mynewt-core/hw/scripts"
