--- a/hw/bsp/dialog_da1469x-dk-pro/bsp.yml
+++ b/hw/bsp/dialog_da1469x-dk-pro/bsp.yml
@@ -23,7 +23,7 @@ bsp.maker: "Renesas Electronics Corporation"
 bsp.arch: cortex_m33
 bsp.compiler: "@apache-mynewt-core/compiler/arm-none-eabi-m33"
 bsp.downloadscript:
-    "hw/mcu/dialog/da1469x/scripts/dialog_da1469x-download_jlink.sh"
+    "hw/scripts/download.sh"
 bsp.debugscript: "hw/mcu/dialog/da1469x/scripts/dialog_da1469x-debug_jlink.sh"
 
 bsp.linkerscript:
