--- a/hw/usb/tinyusb/da146xx/da146xx_usb_monitor/syscfg.yml
+++ b/hw/usb/tinyusb/da146xx/da146xx_usb_monitor/syscfg.yml
@@ -17,20 +17,11 @@
 # under the License.
 #
 
-pkg.name: hw/usb/tinyusb/da146xx
-pkg.description: Hardware initialization for Tinyusb
-pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
-pkg.homepage: "http://mynewt.apache.org/"
-pkg.keywords:
-    - usb
-    - tinyusb
+syscfg.defs:
+    DA146XX_USB_MONITOR_RATE_MS:
+        description: 'USB monitor check rate in milliseconds'
+        value: 500
 
-pkg.apis:
-    - TINYUSB_HW_INIT
-
-pkg.deps:
-    - "@apache-mynewt-core/kernel/os"
-    - "@apache-mynewt-core/hw/usb/tinyusb"
-
-pkg.deps.DA146XX_USB_MONITOR:
-    - "@apache-mynewt-core/hw/usb/tinyusb/da146xx/da146xx_usb_monitor"
+    DA146XX_USB_MONITOR_EVQ:
+        description: 'Event queue for USB state monitoring (NULL for default)'
+        value: ""
